# Memocha

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.langfuse.yaml  docker-compose.loadtest.yaml  docker-compose.monitor.yaml  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 37921dd87539_make_timestamps_timezone_aware.py  6094244bd57e_init_tables.py  93c040d961a9_make_created_at_timezone_aware.py
backend/app/core/: config.py  database.py  exceptions.py  observability.py  prompts.py
backend/app/crud/: message.py  session.py
backend/app/models/: message.py  messsage.py  session.py
backend/app/schemas/: chat.py  message.py  session.py
backend/app/services/: circuit_breaker.py  llm_service.py
backend/core/: config.py  logging.py
backend/tests/: conftest.py  test_crud.py  test_message_history.py  test_message_history_api.py
backend/tests/loadtest/: locustfile.py  mock_openai_server.py
frontend/: Dockerfile
frontend/app/: package-lock.json  package.json
frontend/app/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Chat.tsx  MessageInput.tsx  MessageList.tsx
frontend/app/lib/: api.ts
frontend/app/types/: chat.ts
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: containers.json  dashboards.yml
