[project]
name = "memocha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "python-dotenv",
    "pydantic-settings",
    "pytest",
    "httpx",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
]
