[project]
name = "memocha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
    "alembic",
    "python-dotenv",
    "pydantic-settings",
    "pytest",
    "httpx",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "tenacity>=9.1.2",
    "pybreaker>=1.4.1",
    "langfuse>=3.12.0",
    "greenlet>=3.3.0",
    "pytest-asyncio>=1.3.0",
    "locust>=2.43.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
